# filemanagement

./: default.nix  pyproject.toml  requirements.txt
src/filemanagement/: README.md  core.py  exceptions.py  image-file.py  json-file.py
