[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "filemanagement"
version = "0.0.1"
dependencies = [
    "survey",
    "imageops @ git+https://github.com/odmeran/imageops",
]
readme = "README.md"
keywords = ["file system", "utility", "automation"]
license = {file = "LICENSE"}
authors = [
  {name = "Yuri Klar", email = "juri.klar@outlook.com"},
]

[project.urls]
Repository = "https://github.com/odmeran/filemanagement.git"
Issues = "https://github.com/odmeran/filemanagement/issues"
